Fix horizontal scroll bar

--- a/teachertool/src/components/styling/CatalogOverlay.module.scss
+++ b/teachertool/src/components/styling/CatalogOverlay.module.scss
@@ -62,6 +62,7 @@
                 padding: 1.25rem 1.5rem 1.25rem 1rem;
                 border-bottom: 1px solid var(--pxt-content-accent);
                 flex-shrink: 0;
+                margin: 0;
 
                 &:last-child {
                     border-bottom: none;
